...
    <string name="currency_code_lak">lak</string>
    <string name="currency_code_rsd">rsd</string>


    <string name="new_zealand_dollar">New Zealand Dollar</string>
    <string name="australian_dollar">Australian Dollar</string>
    <string name="euro">Euro</string>
    <string name="sterling">Sterling</string>
    <string name="us_dollar">US Dollar</string>
    <string name="hong_kong_dollar">Hong Kong Dollar</string>
    <string name="canadian_dollar">Canadian Dollar</string>
    <string name="japanese_yen">Japanese Yen</string>
    <string name="afghani">Afghani</string>
...
